--- a/error.html
+++ b/error.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-     <link rel="shortcut icon" type="image/x-icon" href="assets/img/logo/icon.svg">
+    <link rel="shortcut icon" type="image/x-icon" href="assets/img/logo/icon.svg">
     <!-- Place favicon.ico in the root directory -->
 
     <!-- CSS here -->
@@ -70,10 +70,10 @@
 
 
     <main class="main_wrapper overflow-hidden">
-            <!-- animation  -->
-            <div class="header__animate bg__black">
-                <div class="container-fluid">
-                    <div class="header__animate__wraper">
+        <!-- animation  -->
+        <div class="header__animate bg__black">
+            <div class="container-fluid">
+                <div class="header__animate__wraper">
 
                     <div class="header__animate__item">
                         <i class="icofont-phone"></i>
@@ -120,56 +120,58 @@
                         <i class="icofont-email"></i>
                         <h3><a href="mailto:info@digitalmindson.com">info@digitalmindson.com</a></h3>
                     </div>
-                </div> 
                 </div>
             </div>
-            <header>
-                <div class="headerarea headerarea--1 headerarea__transparent header__sticky main__header ">
-                    <div class="container desktop__menu__wrapper">
-                        <div class="headerarea__main__wrapper position-relative">
+        </div>
+        <header>
+            <div class="headerarea headerarea--1 headerarea__transparent header__sticky main__header ">
+                <div class="container desktop__menu__wrapper">
+                    <div class="headerarea__main__wrapper position-relative">
 
-                            <div class="headerarea__component__wrap">
-                                <div class="headerarea__component">
-                                    <div class="headerarea__logo">
-                                        <a href="index.html"><img src="assets/img/logo/full-logo.svg" alt="Bastun Logo"></a>
-                                    </div>
+                        <div class="headerarea__component__wrap">
+                            <div class="headerarea__component">
+                                <div class="headerarea__logo">
+                                    <a href="index.html"><img src="assets/img/logo/full-logo.svg" alt="Bastun Logo"></a>
                                 </div>
-                                <div class="headerarea__component">
-                                    <div class="headerarea__main__menu">
-                                        <nav>
-                                            <ul>
-                                                <li
-                                                    class="headerarea__common__dropdown headerarea__mega__menu position-static">
-                                                    <a class="headerarea__has__dropdown" href="index.html">HOME
-                                                    </a>
+                            </div>
+                            <div class="headerarea__component">
+                                <div class="headerarea__main__menu">
+                                    <nav>
+                                        <ul>
+                                            <li
+                                                class="headerarea__common__dropdown headerarea__mega__menu position-static">
+                                                <a class="headerarea__has__dropdown" href="index.html">HOME
+                                                </a>
 
 
-                                                </li>
+                                            </li>
 
-                                                <li class="headerarea__common__dropdown"><a
-                                                        class="headerarea__has__dropdown" href="service.html">Services
-                                                        <i class="icofont-long-arrow-down"></i></a>
-                                                    <ul class="headerarea__submenu headerarea__submenu--five--wrap service-scrollbar">
+                                            <li class="headerarea__common__dropdown"><a
+                                                    class="headerarea__has__dropdown" href="service.html">Services
+                                                    <i class="icofont-long-arrow-down"></i></a>
+                                                <ul
+                                                    class="headerarea__submenu headerarea__submenu--five--wrap service-scrollbar">
 
-                                                        <li><a href="webdevelopment.html">Web Development</a></li>
-                                                        <li><a href="software.html">Software Development</a></li>
-                                                        <li><a href="appdevelop.html">App Development</a></li>
-                                                        <li><a href="GameDevelop.html">Game Development</a></li>
-                                                        <li><a href="digtalmarketing.html">Digital Marketing</a></li>
-                                                        <li><a href="uidesign.html">UI/UX Design</a></li>
-                                                        <li><a href="itexpert.html">IT Specialist</a></li>
-                                                        <li><a href="#">Content Creator</a></li>
-                                                        <li><a href="seo.html">Search Engine Optimization(SEO)</a></li>
+                                                    <li><a href="webdevelopment.html">Web Development</a></li>
+                                                    <li><a href="software.html">Software Development</a></li>
+                                                    <li><a href="appdevelop.html">App Development</a></li>
+                                                    <li><a href="GameDevelop.html">Game Development</a></li>
+                                                    <!-- <li><a href="digtalmarketing.html">Digital Marketing</a></li> -->
+                                                    <li><a href="uidesign.html">UI/UX Design</a></li>
+                                                    <li><a href="itexpert.html">IT Specialist</a></li>
+                                                    <li><a href="wordpress.html">WordPress Development </a></li>
+                                                    <li><a href="Content_Creater.html">Content Creator</a></li>
+                                                    <li><a href="seo.html">Search Engine Optimization(SEO)</a></li>
 
-                                                    </ul>
+                                                </ul>
 
-                                                </li>
+                                            </li>
 
-                                                <li><a href="#">Careers </a></li>
-                                                <li><a href="blog.html">BLOG </a></li>
-                                                <li><a href="team.html">Team </a></li>
+                                            <li><a href="#">Careers </a></li>
+                                            <li><a href="blog.html">BLOG </a></li>
+                                            <li><a href="team.html">Team </a></li>
 
-                                                <li class="headerarea__common__dropdown"><a
+                                            <li class="headerarea__common__dropdown"><a
                                                     class="headerarea__has__dropdown" href="contact.html">CONTACT
                                                     <i class="icofont-long-arrow-down"></i></a>
                                                 <ul class="headerarea__submenu headerarea__submenu--five--wrap">
@@ -181,51 +183,51 @@
 
                                             </li>
 
-                                    </div>
-
-                                    </ul>
-                                    </nav>
                                 </div>
-                                <div class="headerarea__component">
-                                    <div class="headerarea__right">
-                                    
-                                        <div class="headerarea__button">
-                                            <a class="default__button" href="contact.html">GET FREE QUATE</a>
-                                        </div>
+
+                                </ul>
+                                </nav>
+                            </div>
+                            <div class="headerarea__component">
+                                <div class="headerarea__right">
+
+                                    <div class="headerarea__button">
+                                        <a class="default__button" href="contact.html">GET FREE QUATE</a>
                                     </div>
                                 </div>
                             </div>
-
                         </div>
-                    </div>
-                </div>
-
-                <div class="mob_menu_wrapper container-fluid">
-                    <div class="d-flex justify-content-between align-items-center">
-                        <div class="offcanvas__header--menu__open ">
-                            <a class="offcanvas__header--menu__open--btn" href="javascript:void(0)" data-offcanvas>
-                                <svg xmlns="http://www.w3.org/2000/svg" class="ionicon offcanvas__header--menu__open--svg"
-                                    viewBox="0 0 512 512">
-                                    <path fill="currentColor" stroke="currentColor" stroke-linecap="round"
-                                        stroke-miterlimit="10" stroke-width="32" d="M80 160h352M80 256h352M80 352h352" />
-                                </svg>
-                                <span class="visually-hidden">Offcanvas Menu Open</span>
-                            </a>
-                        </div>
-                        <div class="mobile__log">
-                            <div class="mobile__log--title"><a class="mobile__log--link" href="index.html">
-                                    <img class="mobile__log--img" src="assets/img/logo/full-logo.svg" alt="logo-img">
-                                </a></div>
-                        </div>
-
-                    
 
                     </div>
                 </div>
+            </div>
+
+            <div class="mob_menu_wrapper container-fluid">
+                <div class="d-flex justify-content-between align-items-center">
+                    <div class="offcanvas__header--menu__open ">
+                        <a class="offcanvas__header--menu__open--btn" href="javascript:void(0)" data-offcanvas>
+                            <svg xmlns="http://www.w3.org/2000/svg" class="ionicon offcanvas__header--menu__open--svg"
+                                viewBox="0 0 512 512">
+                                <path fill="currentColor" stroke="currentColor" stroke-linecap="round"
+                                    stroke-miterlimit="10" stroke-width="32" d="M80 160h352M80 256h352M80 352h352" />
+                            </svg>
+                            <span class="visually-hidden">Offcanvas Menu Open</span>
+                        </a>
+                    </div>
+                    <div class="mobile__log">
+                        <div class="mobile__log--title"><a class="mobile__log--link" href="index.html">
+                                <img class="mobile__log--img" src="assets/img/logo/full-logo.svg" alt="logo-img">
+                            </a></div>
+                    </div>
+
+
 
                 </div>
-            </header>
-    <!-- header start -->
+            </div>
+
+            </div>
+        </header>
+        <!-- header start -->
         <!-- Start Offcanvas header menu -->
         <div class="offcanvas__header">
             <div class="offcanvas__inner">
@@ -614,7 +616,7 @@
                     <div class="row align-items-center">
                         <div class="col-xl-6 col-lg-6 col-md-6 col-12">
                             <div class="copyright__left">
-                      <p>Copyright © 2024 <a href="index.html">Digitalminds on.</a> All Right Reserved</p>
+                                <p>Copyright © 2024 <a href="index.html">Digitalminds on.</a> All Right Reserved</p>
                             </div>
                         </div>
                         <div class="col-xl-6 col-lg-6 col-md-6 col-12">
@@ -637,13 +639,14 @@
         </div>
         <!-- footer__section__end -->
 
-    <!-- back to top -->
-    <a href="#top" class="back-to-top" id="backToTop">
-        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-arrow-up">
-            <path d="M12 19V6M5 12l7-7 7 7"/>
-        </svg>
-    </a>
-           <!-- back to top -->
+        <!-- back to top -->
+        <a href="#top" class="back-to-top" id="backToTop">
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor"
+                stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-arrow-up">
+                <path d="M12 19V6M5 12l7-7 7 7" />
+            </svg>
+        </a>
+        <!-- back to top -->
 
 
 
