--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
                                                     <li><a href="software.html">Software Development</a></li>
                                                     <li><a href="appdevelop.html">App Development</a></li>
                                                     <li><a href="GameDevelop.html">Game Development</a></li>
-                                                    <li><a href="digtalmarketing.html">Digital Marketing</a></li>
+                                                    <!-- <li><a href="digtalmarketing.html">Digital Marketing</a></li> -->
                                                     <li><a href="uidesign.html">UI/UX Design</a></li>
                                                     <li><a href="itexpert.html">IT Specialist</a></li>
                                                     <li><a href="wordpress.html">WordPress Development </a></li>
@@ -311,7 +311,7 @@
                                 <div class="headerarea__right">
 
                                     <div class="headerarea__button">
-                                        <a class="default__button" href="contact.html">GET FREE QUATE</a>
+                                        <a class="default__button" href="request.html">GET FREE QUATE</a>
                                     </div>
                                 </div>
                             </div>
