--- a/project.html
+++ b/project.html
@@ -157,31 +157,33 @@
                                                     <li><a href="software.html">Software Development</a></li>
                                                     <li><a href="appdevelop.html">App Development</a></li>
                                                     <li><a href="GameDevelop.html">Game Development</a></li>
-                                                    <li><a href="digtalmarketing.html">Digital Marketing</a></li>
+                                                    <!-- <li><a href="digtalmarketing.html">Digital Marketing</a></li> -->
                                                     <li><a href="uidesign.html">UI/UX Design</a></li>
                                                     <li><a href="itexpert.html">IT Specialist</a></li>
-                                                    <li><a href="#">Content Creator</a></li>
+                                                    <li><a href="wordpress.html">WordPress Development </a></li>
+                                                    <li><a href="Content_Creater.html">Content Creator</a></li>
                                                     <li><a href="seo.html">Search Engine Optimization(SEO)</a></li>
 
                                                 </ul>
+                                        </ul>
 
-                                            </li>
+                                        </li>
 
-                                            <li><a href="#">Careers </a></li>
-                                            <li><a href="blog.html">BLOG </a></li>
-                                            <li><a href="team.html">Team </a></li>
+                                        <li><a href="#">Careers </a></li>
+                                        <li><a href="blog.html">BLOG </a></li>
+                                        <li><a href="team.html">Team </a></li>
 
-                                            <li class="headerarea__common__dropdown"><a
-                                                    class="headerarea__has__dropdown" href="contact.html">CONTACT
-                                                    <i class="icofont-long-arrow-down"></i></a>
-                                                <ul class="headerarea__submenu headerarea__submenu--five--wrap">
+                                        <li class="headerarea__common__dropdown"><a class="headerarea__has__dropdown"
+                                                href="contact.html">CONTACT
+                                                <i class="icofont-long-arrow-down"></i></a>
+                                            <ul class="headerarea__submenu headerarea__submenu--five--wrap">
 
-                                                    <li><a href="about.html">ABOUT </a></li>
-                                                    <li><a href="project.html">Portfolio </a></li>
+                                                <li><a href="about.html">ABOUT </a></li>
+                                                <li><a href="project.html">Portfolio </a></li>
 
-                                                </ul>
+                                            </ul>
 
-                                            </li>
+                                        </li>
 
                                 </div>
 
