--- a/Content_Creater.html
+++ b/Content_Creater.html
@@ -159,7 +159,7 @@
                                                     <li><a href="software.html">Software Development</a></li>
                                                     <li><a href="appdevelop.html">App Development</a></li>
                                                     <li><a href="GameDevelop.html">Game Development</a></li>
-                                                    <li><a href="digtalmarketing.html">Digital Marketing</a></li>
+                                                    <!-- <li><a href="digtalmarketing.html">Digital Marketing</a></li> -->
                                                     <li><a href="uidesign.html">UI/UX Design</a></li>
                                                     <li><a href="itexpert.html">IT Specialist</a></li>
                                                     <li><a href="wordpress.html">WordPress Development </a></li>
@@ -627,7 +627,7 @@
                             </div>
                             <div class="service__details__planning" data-aos="fade-up" data-aos-duration="1500">
                                 <div class="row">
-                                   
+
                                     <div class="col-xl-12 col-lg-12 col-md-6 col-sm-12">
                                         <div class="service__details__planning__inner">
                                             <div class="service__details__planning__heading">
