--- a/project-details.html
+++ b/project-details.html
@@ -151,17 +151,18 @@
                                             <li class="headerarea__common__dropdown"><a
                                                     class="headerarea__has__dropdown" href="service.html">Services
                                                     <i class="icofont-long-arrow-down"></i></a>
-                                                <ul
+                                                    <ul
                                                     class="headerarea__submenu headerarea__submenu--five--wrap service-scrollbar">
 
                                                     <li><a href="webdevelopment.html">Web Development</a></li>
                                                     <li><a href="software.html">Software Development</a></li>
                                                     <li><a href="appdevelop.html">App Development</a></li>
                                                     <li><a href="GameDevelop.html">Game Development</a></li>
-                                                    <li><a href="digtalmarketing.html">Digital Marketing</a></li>
+                                                    <!-- <li><a href="digtalmarketing.html">Digital Marketing</a></li> -->
                                                     <li><a href="uidesign.html">UI/UX Design</a></li>
                                                     <li><a href="itexpert.html">IT Specialist</a></li>
-                                                    <li><a href="#">Content Creator</a></li>
+                                                    <li><a href="wordpress.html">WordPress Development </a></li>
+                                                    <li><a href="Content_Creater.html">Content Creator</a></li>
                                                     <li><a href="seo.html">Search Engine Optimization(SEO)</a></li>
 
                                                 </ul>
