--- a/seo.html
+++ b/seo.html
@@ -159,11 +159,11 @@
                                                     <li><a href="software.html">Software Development</a></li>
                                                     <li><a href="appdevelop.html">App Development</a></li>
                                                     <li><a href="GameDevelop.html">Game Development</a></li>
-                                                    <li><a href="digtalmarketing.html">Digital Marketing</a></li>
+                                                    <!-- <li><a href="digtalmarketing.html">Digital Marketing</a></li> -->
                                                     <li><a href="uidesign.html">UI/UX Design</a></li>
                                                     <li><a href="itexpert.html">IT Specialist</a></li>
                                                     <li><a href="wordpress.html">WordPress Development </a></li>
-                                                    <li><a href="#">Content Creator</a></li>
+                                                    <li><a href="Content_Creater.html">Content Creator</a></li>
                                                     <li><a href="seo.html">Search Engine Optimization(SEO)</a></li>
 
                                                 </ul>
@@ -741,7 +741,7 @@
                                                     Return on Investment.</p>
 
                                             </div>
-                                           
+
                                         </div>
                                     </div>
                                 </div>
@@ -867,19 +867,17 @@
                 </div>
                 <div class="row">
                     <div class="col-md-12">
-                        <div class="service__details__heading" data-aos="fade-up"
-                        data-aos-duration="1500">
-                        <h2>Partner with Digital Minds On</h2>
-                    </div>
-                    <div class="service__details__text" data-aos="fade-up"
-                        data-aos-duration="1500">
-                        <p>Unlike other companies that merely aim at ensuring you get certain
-                            ranks, we at Digital Minds On ensure that your company realizes
-                            long-term digital growth. Consumers approach SEO services
-                            strategically evaluating the possibility of success in an unendingly
-                            changing world, we guide you.</p>
+                        <div class="service__details__heading" data-aos="fade-up" data-aos-duration="1500">
+                            <h2>Partner with Digital Minds On</h2>
+                        </div>
+                        <div class="service__details__text" data-aos="fade-up" data-aos-duration="1500">
+                            <p>Unlike other companies that merely aim at ensuring you get certain
+                                ranks, we at Digital Minds On ensure that your company realizes
+                                long-term digital growth. Consumers approach SEO services
+                                strategically evaluating the possibility of success in an unendingly
+                                changing world, we guide you.</p>
 
-                    </div>
+                        </div>
                         <div class="service__details__heading" data-aos="fade-up" data-aos-duration="1500">
                             <h2>Conclusion</h2>
                         </div>
