--- a/request.html
+++ b/request.html
@@ -355,38 +355,6 @@
                     </div>
                 </form>
             </div>
-            <!-- <form action="#">
-                <div class="request-quote__area-inputs">
-                    <div class="request-quote__area-input-field">
-                        <label for="first-name">First Name *</label>
-                        <input type="text" id="first-name" placeholder="First">
-                    </div>
-                    <div class="request-quote__area-input-field">
-                        <label for="last-name">Last Name *</label>
-                        <input type="text" id="last-name" placeholder="Last">
-                    </div>
-                    <div class="request-quote__area-input-field">
-                        <label for="email">Email Address *</label>
-                        <input type="email" id="email" placeholder="Email">
-                    </div>
-                    <div class="request-quote__area-input-field">
-                        <label for="number">Number *</label>
-                        <input type="text" id="number" placeholder="+ 00 123 4567">
-                    </div>
-                    <div class="request-quote__area-input-field">
-                        <label for="company">Company/Organization *</label>
-                        <input type="text" id="company" placeholder="Envato">
-                    </div>
-                    <div class="request-quote__area-input-field">
-                        <label for="website">Website *</label>
-                        <input type="text" id="website" placeholder="http://envato.com/">
-                    </div>
-                </div>
-         
-                <label for="message" class="mb-2">Message *</label>
-                <textarea id="message" placeholder="Type Here"></textarea>
-                <input type="submit" value="Submit Now" class="default__button">
-            </form> -->
         </div>
     </div>
 
@@ -399,7 +367,7 @@
                 <a href="index.html">
 
                     <img class="bbb__animate" src="assets/img/footer/brand__badge.png" alt="Footer badge">
-                    <img class="bbb__icon" src="assets/img/footer/brand__badge__inner.png" alt="Footer icon badge">
+                    <img class="bbb__icon" src="assets/img/logo/icon.svg" alt="Footer icon badge">
                 </a>
             </div>
         </div>
